@@ -1,107 +1,63 @@
 package com.example.hangeulhunters.infrastructure.service.naver.dto;
 
 import com.example.hangeulhunters.infrastructure.service.naver.constant.PromptConstant;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
+import lombok.experimental.SuperBuilder;
 
+import java.util.Arrays;
 import java.util.List;
 
+/**
+ * 평가 점수 요청을 위한 구조화된 요청 클래스
+ */
 @Data
 @NoArgsConstructor
-@AllArgsConstructor
-@Builder
-public class EvaluateScoreRequest {
-    private List<Message> messages;
-    private Thinking thinking;
-    private ResponseFormat responseFormat;
+@EqualsAndHashCode(callSuper = true)
+@SuperBuilder
+public class EvaluateScoreRequest extends ClovaStructuredRequest<EvaluateScoreProperties> {
 
-    @Data
-    @Builder
-    public static class Message {
-        private String role;
-        private String content;
-    }
+    /**
+     * 평가 점수 요청 객체 생성
+     * @param aiRole AI 역할
+     * @param userRole 사용자 역할
+     * @param situation 상황
+     * @param aiMessage AI 메시지
+     * @param userMessage 사용자 메시지
+     * @return 평가 점수 요청 객체
+     */
+    public static EvaluateScoreRequest of(String aiRole, String userRole, String situation, String aiMessage, String userMessage) {
+        // 시스템 프롬프트 생성
+        String systemPrompt = String.format(
+                PromptConstant.EVALUATE_SCORE.getPromptMessage(),
+                aiRole, userRole, situation
+        );
 
-    @Data
-    @Builder
-    public static class Thinking {
-        private String effort;
-    }
-
-    @Data
-    @Builder
-    public static class ResponseFormat {
-        private String type;
-        private Schema schema;
-
-        @Data
-        @Builder
-        public static class Schema {
-            private String type;
-            private Properties properties;
-            private List<String> required;
-
-            @Data
-            @Builder
-            public static class Properties {
-                private Property politenessScore;
-                private Property naturalnessScore;
-
-                @Data
-                @Builder
-                public static class Property {
-                    private String type;
-                    private String description;
-                    private Integer minimum;
-                    private Integer maximum;
-                }
-            }
-        }
-    }
-
-    public static EvaluateScoreRequest ofEvaluateScore(String aiRole, String userRole, String situation, String aiMessage, String userMessage) {
-        return EvaluateScoreRequest.builder()
-                .messages(List.of(
-                        Message.builder()
-                                .role("system")
-                                .content(String.format(PromptConstant.EVALUATE_SCORE.getPromptMessage(), aiRole, userRole, situation))
-                                .build(),
-                        Message.builder()
-                                .role("assistant")
-                                .content(aiMessage)
-                                .build(),
-                        Message.builder()
-                                .role("user")
-                                .content(userMessage)
-                                .build()
-                ))
-                .thinking(Thinking.builder()
-                        .effort("none")
+        // 메시지 목록 생성
+        List<Message> messages = Arrays.asList(
+                Message.builder()
+                        .role("system")
+                        .content(systemPrompt)
+                        .build(),
+                Message.builder()
+                        .role("assistant")
+                        .content(aiMessage)
+                        .build(),
+                Message.builder()
+                        .role("user")
+                        .content(userMessage)
                         .build()
-                )
-                .responseFormat(ResponseFormat.builder()
-                        .type("json")
-                        .schema(ResponseFormat.Schema.builder()
-                                .type("object")
-                                .properties(ResponseFormat.Schema.Properties.builder()
-                                        .politenessScore(ResponseFormat.Schema.Properties.Property.builder()
-                                                .type("number")
-                                                .description("존댓말 점수")
-                                                .minimum(0)
-                                                .maximum(100)
-                                                .build())
-                                        .naturalnessScore(ResponseFormat.Schema.Properties.Property.builder()
-                                                .type("number")
-                                                .description("자연스러움 점수")
-                                                .minimum(0)
-                                                .maximum(100)
-                                                .build())
-                                        .build())
-                                .required(List.of("politenessScore", "naturalnessScore"))
-                                .build())
-                        .build())
-                .build();
+        );
+
+        // 필수 필드 목록
+        List<String> requiredFields = Arrays.asList("politenessScore", "naturalnessScore");
+
+        // 속성 생성
+        EvaluateScoreProperties properties = EvaluateScoreProperties.createDefault();
+
+        // 요청 객체 생성 및 반환
+        EvaluateScoreRequest request = new EvaluateScoreRequest();
+        return request.createBaseRequest(messages, properties, requiredFields);
     }
 }
